--- a/src/Components/Dashboard/Profile.css
+++ b/src/Components/Dashboard/Profile.css
@@ -1,31 +1,84 @@
 #dashboard {
     width: 100%;
     height: 84.8vh;
-    background-color: #f0f0f0; 
-}
-
-#panel {
+    background-color: #f0f0f0;
+    display: flex;
+  }
+  
+  .card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+  }
+  
+  /* Add rounded corners to the top left and the top right corner of the image */
+  img {
+    border-radius: 5px 5px 0 0;
+  }
+  
+  .App h1 {
+    /* justify-content: center; */
+    padding-left: 50px;
+    font-family: "Times New Roman", Times, serif;
+    /* align-items: left; */
+    display: flex;
+    text-transform: uppercase;
+  }
+  
+  .bigcard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    margin: 46px;
+  }
+  .bigcard img {
+    height: 400px;
+    width: 200px;
+  }
+  .container {
+    font-size: 25px;
+    margin-left: 80px;
+    font-family: "Times New Roman", Times, serif;
+  }
+  
+  #panel {
     width: 20%;
     height: 84.8vh;
-    background-color: #333; 
-    color: #fff; 
-}
-
-#panelButton {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  #panelButton {
     height: 30px;
     width: 90%;
     padding: 15px 0px 15px 10px;
-    margin: 0px 10px 10px 10px ;
+    margin: 0px 10px 10px 10px;
     font-size: larger;
     font-weight: 500;
-    background-color: #f2963f; 
-}
-
-#panelButton:hover {
-    background-color: #d87f2c; 
-}
-
-#panelButtonText {
+    background-color: #f2963f;
+  }
+  
+  #panelButton:hover {
+    background-color: #d87f2c;
+  }
+  
+  #panelButtonText {
     text-decoration: none;
-    color: #fff; 
-}
+    color: #fff;
+  }
