--- a/src/Components/Dashboard/AddPatient.css
+++ b/src/Components/Dashboard/AddPatient.css
@@ -1,82 +1,105 @@
 #dashboard {
-    width: 100%;
-    height: 84vh;
-    background-color: #f0f0f0; 
+  width: 100%;
+  height: 84vh;
+  background-color: #f0f0f0;
 }
 
 #panel {
-    width: 20%;
-    height: 84.4vh;
-    background-color: #333; 
-    color: #fff; 
+  width: 20%;
+  height: 84.4vh;
+  background-color: #333;
+  color: #fff;
 }
 
 #panelButton {
-    height: 30px;
-    width: 90%;
-    padding: 15px 0px 15px 10px;
-    margin: 0px 10px 10px 10px ;
-    font-size: larger;
-    font-weight: 500;
-    background-color: #f2963f; 
+  height: 50px;
+  width: 90%;
+  padding: 15px 0px 15px 10px;
+  margin: 0px 10px 10px 10px;
+  font-size: larger;
+  font-weight: 500;
+  background-color: #f2963f;
 }
 
 #panelButton:hover {
-    background-color: #d87f2c; 
+  background-color: #d87f2c;
 }
 
 #panelButtonText {
-    text-decoration: none;
-    color: #fff; 
+  text-decoration: none;
+  color: #fff;
 }
 
-#dashboard{
-    display: flex;
+#dashboard {
+  display: flex;
 }
 
-#addPatientBackImage{
-    height: 84.4vh;
-    width: 114%;
+#addPatientBackImage {
+  height: 84.4vh;
+  width: 114%;
 }
 
-#addPatientForm{
-    position: absolute;
-    left: 500px;
-    bottom: 200px;
-    text-align: center;
-
+#addPatientForm {
+  position: absolute;
+  left: 500px;
+  bottom: 200px;
+  text-align: center;
 }
 
-#addPatientHeader{
-    font-size: 30px;
-    font-weight: 500;
-    padding: 30px 10px;
+#addPatientHeader {
+  font-size: 30px;
+  font-weight: 500;
+  padding: 30px 10px;
 }
 
-#patientName, #patientNumber, #patientAge{
-    margin: 10px 10px;
-    height: 30px;
-    width: 250px;
-    margin: 10px 0px;
-    background-color: #e4e4e4;
-    border-bottom: 2px solid orangered;
-    font-size: medium;
-
+#patientName,
+#patientNumber,
+#patientAge {
+  margin: 10px 10px;
+  height: 30px;
+  width: 250px;
+  margin: 10px 0px;
+  background-color: #e4e4e4;
+  border-bottom: 2px solid orangered;
+  font-size: medium;
 }
 
-#patientGenderBox, #patientSubmit{
-    height: 30px;
-    width: 100px;
-    font-size: medium;
-    cursor: pointer;
+#patientGenderBox {
+  height: 80px;
+  /* width: 300px; */
+  font-size: 20px;
+  cursor: pointer;
 }
 
-#underline{
-    width: 71px;
-    height: 3px;
-    position: absolute;
-    left: 90px;
-    bottom: 230px;
-    background: black;
-    border-radius: 9px;
+#patientListGender {
+  margin: 15px;
+  font-size: 20px;
+  width: 150 px;
+}
+#patientGender {
+  font-size: 20px;
+}
+
+#patientSubmit {
+  height: 40px;
+  width: 100px;
+  font-size: medium;
+  cursor: pointer;
+  position: relative;
+  top: 20px;
+  border-radius: 8px;
+}
+#patientSubmit:hover {
+  background-color: rgb(47, 236, 47);
+  scale: 1.02;
+}
+
+#underline {
+  width: 72px;
+  height: 3px;
+  position: absolute;
+  left: 90px;
+  bottom: 280px;
+  background: black;
+  border-radius: 9px;
 }
