--- a/src/Components/Dashboard/Addmedicine.css
+++ b/src/Components/Dashboard/Addmedicine.css
@@ -1,88 +1,101 @@
 #dashboard {
-    width: 100%;
-    height: 84vh;
-    background-color: #f0f0f0; 
+  width: 100%;
+  height: 84vh;
+  background-color: #f0f0f0;
 }
 
 #panel {
-    width: 20%;
-    height: 84vh;
-    background-color: #333; 
-    color: #fff; 
+  width: 20%;
+  height: 84vh;
+  background-color: #333;
+  color: #fff;
 }
 
 #panelButton {
-    height: 30px;
-    width: 90%;
-    padding: 15px 0px 15px 10px;
-    margin: 0px 10px 10px 10px ;
-    font-size: larger;
-    font-weight: 500;
-    background-color: #f2963f; 
+  height: 30px;
+  width: 90%;
+  padding: 15px 0px 15px 10px;
+  margin: 0px 10px 10px 10px;
+  font-size: larger;
+  font-weight: 500;
+  background-color: #f2963f;
 }
 
 #panelButton:hover {
-    background-color: #d87f2c; 
+  background-color: #d87f2c;
 }
 
 #panelButtonText {
-    text-decoration: none;
-    color: #fff; 
+  text-decoration: none;
+  color: #fff;
 }
 
-#dashboard{
-    display: flex;
+#dashboard {
+  display: flex;
 }
 
-#addMedicineBackImage{
-    height: 84.4vh;
-    width: 114%;
+#addMedicineBackImage {
+  height: 84.4vh;
+  width: 114%;
 }
 
-#addMedicineForm{
-    position: absolute;
-    left: 350px;
-    bottom: 150px;
-    text-align: center;
-
+#addMedicineForm {
+  position: absolute;
+  left: 450px;
+  bottom: 200px;
+  /* text-align: center; */
 }
 
-#addMedicineHeader{
-    font-size: 30px;
-    font-weight: 500;
-    padding: 30px 10px;
+#addMedicineHeader {
+  font-size: 30px;
+  font-weight: 500;
+  padding: 30px 10px;
 }
 
-#patientId, #medicineName, #medicineFoodList, #medicineTimeList{
-    margin: 10px 10px;
-    height: 30px;
-    width: 250px;
-    margin: 10px 0px;
-    background-color: #e4e4e4;
-    border-bottom: 2px solid orangered;
-    font-size: medium;
-
+#patientId,
+#medicineName,
+#medicineFoodList,
+#medicineTimeList {
+  /* margin: 20px 10px; */
+  height: 30px;
+  /* width: 250px; */
+  margin: 12px 0px;
+  background-color: #e4e4e4;
+  border-bottom: 2px solid orangered;
+  font-size: 16px;
+  /* text-transform: uppercase; */
+  /* text-align: center; */
 }
 
-#medicineTimeBox, #medicineFoodBox, #medicineSubmit{
-    height: 30px;
-    width: 100px;
-    font-size: medium;
-    cursor: pointer;
+#medicineTimeBox,
+#medicineFoodBox,
+#medicineSubmit {
+  height: 40px;
+  width: 100px;
+  font-size: medium;
+  cursor: pointer;
 }
 
-#medicineUnderline{
-    width: 71px;
-    height: 3px;
-    position: absolute;
-    left: 170px;
-    bottom: 260px;
-    background: black;
-    border-radius: 9px;
+#medicineUnderline {
+  width: 71px;
+  height: 3px;
+  position: absolute;
+  left: 70px;
+  bottom: 280px;
+  background: black;
+  border-radius: 9px;
 }
 
-#addMedicineSideImage{
-    position: absolute;
-    right: 70px;
-    top: 230px;
+#addMedicineSideImage {
+  position: absolute;
+  right: 70px;
+  top: 230px;
+}
+
+#medicineSubmit {
+  border-radius: 7px;
+}
+#medicineSubmit:hover {
+  scale: 1.02;
+  background-color: rgb(45, 226, 45);
 }
